tooling/nargo_cli/tests/compile_failure/dep_impl_primitive/src/main.nr
use dep::bad_impl;

fn main(x : Field) {
    x.something();
}
